syntax = "proto3";

message product {
  int32 id = 1;
  string product_name = 2;
  string brand = 3;
  int64 count = 4;
}

message Empty {}

message productList {
  repeated product product = 1;
}

service productService {
  rpc getAll (Empty) returns (productList) {}
}
